# ChangeLog for sys-libs/readline
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/readline/ChangeLog,v 1.86 2006/12/16 03:07:46 vapier Exp $

*readline-5.2_p1 (16 Dec 2006)

  16 Dec 2006; Mike Frysinger <vapier@gentoo.org> +readline-5.2_p1.ebuild:
  Version bump.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> readline-5.1_p4.ebuild,
  readline-5.2.ebuild:
  Added ~sparc-fbsd keyword.

  13 Oct 2006; Mike Frysinger <vapier@gentoo.org>
  +files/readline-5.2-rlfe-build.patch, readline-5.2.ebuild:
  Link against the local readline #151174 by Javier Armendariz.

  13 Oct 2006; Roy Marples <uberlord@gentoo.org>
  +files/readline-5.1-fbsd-pic.patch, readline-5.1_p4.ebuild,
  readline-5.2.ebuild:
  Always build with -fPIC on FreeBSD.

*readline-5.2 (12 Oct 2006)

  12 Oct 2006; Mike Frysinger <vapier@gentoo.org> +readline-5.2.ebuild:
  Version bump.

  19 Aug 2006; Fabian Groffen <grobian@gentoo.org> readline-5.1_p4.ebuild:
  Marked ppc-macos stable for progressive users (bug #129885)

  27 Apr 2006; Alec Warner <antarus@gentoo.org>
  files/digest-readline-4.3-r5, files/digest-readline-4.3-r6,
  files/digest-readline-5.0-r2, Manifest:
  Fixing SHA256 digest, pass four

  29 Apr 2006; Joshua Kinard <kumba@gentoo.org> readline-5.1_p4.ebuild:
  Marked stable on mips.

  18 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  readline-5.1_p4.ebuild:
  Stable on sparc wrt #129885

  17 Apr 2006; Markus Rothe <corsair@gentoo.org> readline-5.1_p4.ebuild:
  Stable on ppc64; bug #129885

  16 Apr 2006; Bryan Østergaard <kloeri@gentoo.org readline-5.1_p4.ebuild:
  Stable on alpha, bug 129885.

  15 Apr 2006; Marcus D. Hanwell <cryos@gentoo.org> readline-5.1_p4.ebuild:
  Marked stable on amd64, bug 129885.

  15 Apr 2006; <nixnut@gentoo.org> readline-5.1_p4.ebuild:
  Stable on ppc. Bug #129885

  15 Apr 2006; Mark Loeser <halcy0n@gentoo.org> readline-5.1_p4.ebuild:
  Stable on x86; bug #129885
