@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/readline/readline-5.2.ebuild,v 1.4 2006/10/17 06:02:10 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/readline/readline-5.2.ebuild,v 1.5 2007/01/13 19:36:31 vapier Exp $
 
 EAPI="prefix"
 
@@ -94,17 +94,9 @@ src_install() {
 }
 
 pkg_preinst() {
-	# Backwards compatibility #29865
-	if [[ -e ${EROOT}/$(get_libdir)/libreadline.so.4 ]] ; then
-		cp -pPR "${EROOT}"/$(get_libdir)/libreadline.so.4* "${ED}"/$(get_libdir)/
-		touch "${ED}"/$(get_libdir)/libreadline.so.4*
-	fi
+	preserve_old_lib /$(get_libdir)/lib{history,readline}.so.4 #29865
 }
 
 pkg_postinst() {
-	if [[ -e ${EROOT}/$(get_libdir)/libreadline.so.4 ]] ; then
-		ewarn "Your old readline libraries have been copied over."
-		ewarn "You should run 'revdep-rebuild --library libreadline.so.4' asap."
-		ewarn "Once you have, you can safely delete /$(get_libdir)/libreadline.so.4*"
-	fi
+	preserve_old_lib_notify /$(get_libdir)/lib{history,readline}.so.4
 }
