@@ -1,6 +1,14 @@
 # ChangeLog for sys-libs/readline
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/readline/ChangeLog,v 1.86 2006/12/16 03:07:46 vapier Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/readline/ChangeLog,v 1.88 2007/01/13 19:36:31 vapier Exp $
+
+  13 Jan 2007; Mike Frysinger <vapier@gentoo.org> readline-4.3-r5.ebuild,
+  readline-5.0-r2.ebuild, readline-5.1_p4.ebuild, readline-5.2.ebuild,
+  readline-5.2_p1.ebuild:
+  Switch to using preserve_old_lib().
+
+  04 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> readline-4.3-r5.ebuild:
+  Remove gnuconfig usage.
 
 *readline-5.2_p1 (16 Dec 2006)
 
